--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,22 @@
 @import "tailwindcss";
 
 :root {
-  --background: #171717;
-  --foreground: #171717;
-  --font-secondary: "Baloo 2", "Baloo 2 Fallback";
+  --primary: #00cfaf;
+  --secondary: #de2488;
+  --background: #ffffff;
+  --foreground: #0a0a0a;
+  --font-secondary: "Baloo 2", "Baloo 2 Fallback", cursive;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ededed;
-    --foreground: #0a0a0a;
-    --font-secondary: "Baloo 2", "Baloo 2 Fallback";
+    --background: #171717;
+    --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
+  background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-secondary);
 }
