Add: some fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,4 +22,5 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-secondary);
+  position: static;
 }
